# erpnext_zelin_ac

./: README.md  pyproject.toml
zelin_ac/: __init__.py  api.py  baidu_api.py  doc_events.py  hooks.py  install.py  overrides.py  permission.py  queries.py  utils.py
zelin_ac/config/: desktop.py  docs.py
zelin_ac/fixtures/: custom_field.json  my_invoice_type.json  property_setter.json
zelin_ac/monkey_patches/: general_ledger.py  get_item_details.py  payment_entry.py  payment_request.py  printview.py  stock_ledger.py
zelin_ac/public/js/: delivery_note.js  expense_claim.js  item_price.js  material_request.js  sales_invoice.js  stock_entry.js
zelin_ac/translations/: zh.csv
zelin_ac/zelin_accounting/doctype/baidu_settings/: baidu_settings.js  baidu_settings.json  baidu_settings.py  test_baidu_settings.py
zelin_ac/zelin_accounting/doctype/balance_sheet_settings/: balance_sheet_settings.js  example_data.json
zelin_ac/zelin_accounting/doctype/balance_sheet_settings_item/: balance_sheet_settings_item.json
zelin_ac/zelin_accounting/doctype/cash_flow/: cash_flow.js  cash_flow.json  cash_flow.py
zelin_ac/zelin_accounting/doctype/cash_flow_code/: cash_flow_code.json
zelin_ac/zelin_accounting/doctype/import_ofd/: import_ofd.js  import_ofd.json  import_ofd.py  test_import_ofd.py
zelin_ac/zelin_accounting/doctype/import_ofd_content/: import_ofd_content.json  import_ofd_content.py
zelin_ac/zelin_accounting/doctype/invoice_recognition/: invoice_recognition.js  invoice_recognition.json  invoice_recognition.py  invoice_recognition_dashboard.py  (+2 more)
(+79 files in other folders)
