[project]
name = "zelin_ac"
authors = [
    { name = "szufisher", email = "yuxinyong@163.com"}
]
description = "China Accounting"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "opencv-python~=4.10.0.84" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
